tests/baselines/reference/varAndFunctionShareName.errors.txt
==== tests/cases/compiler/varAndFunctionShareName.ts (1 errors) ====
    var myFn;
    function myFn(): any { }
             ~~~~
!!! error TS2300: Duplicate identifier 'myFn'.